# agent-eval-reliability

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  synthetic_runs.json
src/agentrel/: __init__.py  adapters.py  compare.py  datamodel.py  metrics.py  report.py  repro.py  simulate.py
tests/: test_adapters.py  test_compare.py  test_datamodel.py  test_metrics.py  test_report.py  test_repro.py
