[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrel"
version = "0.1.0"
description = "Reliability and reproducibility statistics for stochastic agent / tool-use evals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yongzhe2160cs" }]
keywords = [
    "llm",
    "evaluation",
    "agents",
    "reliability",
    "reproducibility",
    "statistics",
    "inspect-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yongzhe2160cs/agent-eval-reliability"
Repository = "https://github.com/yongzhe2160cs/agent-eval-reliability"
Issues = "https://github.com/yongzhe2160cs/agent-eval-reliability/issues"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentrel"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "NPY"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["agentrel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
